--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1700,23 +1700,20 @@
 
                     <div class="col my-3 mx-3">
                       <p>
-
-                        1. El  se registra en el siguiente formulario:
-                        https://app.flokzu.com/public/01bb9LSERSO, eligiendo la opción “Coach de
-                        Titulación y Profesionalización”.
+                        Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        Nombre completo y matrícula<br/>
+                        Modalidad de servicio social 
                         <br/><br/>
-                        2. Si el  cumple con los requisitos es aceptado dentro del programa y se
-                        le comparte la Carta de Aceptación (Anexo 1).
+                        1. Se emiten convocatorias de acuerdo con los espacios disponibles dentro de las áreas de la Universidad. En las mismas se delimitan las actividades y el programa de servicio social. La aceptación dependerá de las características de la vacante.
                         <br/><br/>
-                        3. El  entrega la Carta de Aceptación completa, a continuación, se le
-                        capacita y se le comparten los objetivos del programa, asignando una base de
-                        alumnos para su contacto.
+                        2. El  alumno solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su autorización para realizar el servicio social en alguna de las áreas que se mencionan en la convocatoria. Para dicho propósito entregará la carta de aceptación del servicio social (ver anexo 1) expedida por el área de la Universidad que tenga la vacante y solicitará su registro en el programa.
                         <br/><br/>
-                        4. Una vez que el  contacta a la base asignada se le entregan los
-                        formatos de Reporte Global de Actividades (Anexo 2) y la Constancia de Término
-                        (Anexo 3).
+                        3. La prestación del servicio social será continua, a fin de lograr el objetivo establecido.
                         <br/><br/>
-                        5. Se emite la Carta de liberación del Servicio Social.
+                        4. Independientemente de la modalidad presencial en la que puede prestarse el servicio social, la Universidad impulsa aquellos programas o mecanismos de acreditación del servicio social o equivalentes que puedan realizarse en la modalidad a distancia, para que en beneficio de sus alumnos ubicados dentro y fuera del territorio nacional, se constituyan en una opción para la realización y la acreditación del servicio social en línea. En consecuencia, para la acreditación del servicio social son reconocidas las modalidades: presencial y en línea.
+                        <br/><br/>
+                        5. Al término de las actividades objeto del programa será requisitada y firmará el Reporte global de actividades (anexo 2) y el área de la Universidad donde se prestó el servicio social deberá emitir la constancia correspondiente (anexo 3).
 
                       </p>
                     </div>
@@ -2022,22 +2019,16 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        1. El  se registra en el siguiente enlace: https://app.flokzu.com/public/01bb9LSERSO
-                        eligiendo la
-                        opción de “Servicio Social para la Comunidad”.
+                        1. Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        Nombre completo y matrícula<br/>
+                        Modalidad de servicio social<br/>
                         <br/><br/>
-                        2. Se comparte el formato de Carta de Aceptación (Anexo 1), una vez es completado y firmado por
-                        el
-                         se registra el inicio de su Servicio Social.
+                        2. Una vez registrado ,se comparte el formato de Carta de Aceptación (Anexo), para que se realice el registro del inicio del servicio social
                         <br/><br/>
-                        3. El  lleva a cabo las actividades propuestas por la institución, las características y
-                        finalización del
-                        programa depende de la ONG o Asociación Civil. Una vez finalizado el programa esta institución
-                        emite el
-                        reporte global de actividades (Anexo 2) y la Constancia de término (Anexo 3).
+                        3. El alumno deberá llevar a cabo las actividades propuestas por la institución, las características y finalización del programa depende de la ONG o Asociación Civil. Una vez finalizado el programa , la institución emite el reporte global de actividades (Anexo 2) y la Constancia de término (Anexo 3).
                         <br/><br/>
-                        4. Se emite la Carta de liberación del Servicio Social.
-
+                        4. Al finalizar el alumno deberá compartir los formatos de término para revisión y posterior tendrá que adjuntarlos en el porta SIu para la validación y liberación
                       </p>
                     </div>
 
@@ -2343,22 +2334,20 @@
 
                     <div class="col my-3 mx-3">
                       <p>
-
-                        1. El  solicitará a la Dirección de Servicios Escolares y Regulación de la
-                        Universidad, su autorización para realizar el servicio social en la ONG de su
-                        elección. Para dicho propósito entregará la Carta de aceptación del servicio social
-                        (ver anexo 1) expedida por la ONG que corresponda y solicitará su registro en el
-                        programa.
+                        Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        Nombre completo y matrícula<br/>
+                        Modalidad de servicio social
                         <br/><br/>
-                        2. El  realizará una donación sugerida de $1,500.00 MNX, así como
-                        materiales que visibilicen y sensibilicen las problemáticas de la población a la que
-                        apoya la fundación, esto a través de una investigación documental.
+                        Es importante contactar primero a la ONG y revisar con ellos si están dispuestos a apoyar con la firma de los formatos de término.
                         <br/><br/>
-                        3. El  entregará avances de la investigación y materiales, una vez finalizados
-                        los materiales el  los entregará además del reporte global de actividades
-                        (Anexo 2) y la Constancia de Término (Anexo 3).
+                        1.El  alumno/egresado, solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su autorización para realizar el servicio social en la ONG de su elección. Para dicho propósito entregará la Carta de aceptación del servicio social (ver anexo 1) expedida por la ONG que corresponda y solicitará su registro en el programa.
                         <br/><br/>
-                        4. Una vez validadas las entregas se emite la Carta de liberación.
+                        2. El alumno/egresado ,  realizará una donación sugerida de $1,500.00 MNX, así como materiales que visibilicen y sensibilicen las problemáticas de la población a la que apoya la fundación, esto a través de una investigación documental.
+                        <br/><br/>
+                        3. El alumno /egresado , entregará avances de la investigación y materiales. Una vez finalizados los materiales  deberá enviar los formatos de reporte global de actividades (Anexo 2) y la Constancia de Término (Anexo 3), para revisión.
+                        <br/><br/>
+                        4. Por último deberá adjuntar los formatos para la validación y liberación del servicio social 
 
                       </p>
                     </div>
@@ -2660,31 +2649,25 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        1. El  solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su
-                        autorización para
-                        realizar el servicio social en la empresa o emprendimiento de su elección.
+                        Para esta modalidad es importante resaltar que el alumno deberá entregar los mismos formatos del servicio social regular pero adaptado a la modalidad de empresas y emprendimientos.Los formatos deberán ser impresos en hoja membretada y estar firmados y sellados 
                         <br/><br/>
-                        Para dicho propósito entregará la carta de aceptación del servicio social (ver anexo 1) expedida
-                        por la empresa
-                        o emprendimiento que corresponda y solicitará su registro en el programa.
+
+                        Para el registro el alumno deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        -Nombre completo y matrícula<br/>
+                        -Modalidad de servicio Social
+                        <br/><br/>
+                        1. El alumno solicitará a la Dirección de Servicios Escolares y Regulación de la Universidad, su autorización para realizar el servicio social en la empresa o emprendimiento de su elección.
+                        <br/><br/>
+                        Para dicho propósito entregará la carta de aceptación del servicio social expedida por la empresa o emprendimiento que corresponda y solicitará su registro en el programa.
                         <br/><br/>
                         2. La prestación del servicio social será continua, a fin de lograr el objetivo establecido.
                         <br/><br/>
-                        3. Independientemente de la modalidad presencial en la que puede prestarse el servicio social,
-                        la Universidad
-                        impulsa aquellos programas o mecanismos de acreditación del servicio social o equivalentes que
-                        puedan
-                        realizarse en la modalidad a distancia, para que en beneficio de sus alumnos ubicados dentro y
-                        fuera del
-                        territorio nacional, se constituyan en una opción para la realización y la acreditación del
-                        servicio social en línea.
-                        En consecuencia, para la acreditación del servicio social son reconocidas las modalidades:
-                        presencial y en
-                        línea.
+                        3. Independientemente de la modalidad presencial en la que puede prestarse el servicio social, la Universidad impulsa aquellos programas o mecanismos de acreditación del servicio social o equivalentes que puedan realizarse en la modalidad a distancia, para que en beneficio de sus alumnos ubicados dentro y fuera del territorio nacional, se constituyan en una opción para la realización y la acreditación del servicio social en línea. En consecuencia, para la acreditación del servicio social son reconocidas las modalidades: presencial y en línea.
                         <br/><br/>
-                        4. Al término de las actividades objeto del programa será requisitada y firmará el Reporte global
-                        de actividades
-                        (anexo 2) y la empresa o emprendimiento deberá emitir la constancia correspondiente (anexo 3).
+                        4.Al término de las actividades objeto del programa será requisitada y firmará el Reporte global de actividades y la empresa o emprendimiento deberá emitir la constancia correspondiente.
+                        <br/><br/>
+                        Por último el alumno deberá adjuntar en el portal SIU, los documentos de término para la validación y liberación del servicio social.
 
                       </p>
                     </div>
