--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -650,9 +650,9 @@
                             
                           </div>
                           
-                          <div class="col card border border-0">
+                          <div class="col card border border-0" style="text-align: justify;">
         
-                            <strong class="py-3 px-3" style="text-align: center;"> Caracteristicas de la certificacion parcial</strong></br>
+                            <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
                             Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
