--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -184,9 +184,9 @@
                   <h5 class="card-title">Constancia de estudios</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla debes tener tu expediente digital completo. 
+                  Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
-                  en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios. Toma en cuenta que calificaciones se actualizan 
+                  en tu SIU es la misma que se plasmará en el documento solicitado. Revisa que esté correcta ya que no habrá cambios. Hay que tomar en cuenta que calificaciones se actualizan 
                   luego de una semana de cerrado el curso.
                   <br/><br/>
                   
@@ -205,7 +205,7 @@
                   <p class="card-text"><small class="text-muted">Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
                   Documento que acredita el término de la Licenciatura y que te permite desempeñarte en el 
-                  ámbito laboral de tu profesión mientras te encuentras en el proceso de titulación. 
+                  ámbito laboral de la profesión mientras el alumno se encuentra en el proceso de titulación. 
                   Para obtenerla debes tener tu expediente digital completo y fotografías tamaño óvalo-credencial. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -223,9 +223,9 @@
                   <h5 class="card-title">Historial académico</h5>
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo debes tener cursado mínimo un cuatrimestre del programa inscrito 
-                  y tu expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
-                  actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
+                  Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo el alumno debe tener cursado mínimo un cuatrimestre del programa inscrito 
+                  y el expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
+                  actualmente en SIU es la misma que se plasmará en el documento solicitado. Revisa que esté correcta ya que no habrá cambios.
                   <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -243,7 +243,7 @@
                   <h5 class="card-title">Credencial</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que permite identificarte como orgulloso alumno de la institución.
+                  Documento que identificar al alumno como orgulloso alumno de la institución.
                   Para obtenerla debes tener tu expediente digital completo.
                   <br/><br/>
                   
