--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1377,24 +1377,23 @@
                     <div class="col my-3 mx-3">
                       <p>
 
-                        1. El  se registra en el siguiente formulario:
-                        https://app.flokzu.com/public/01bb9LSERSO, eligiendo la opción de
-                        “Servicio Social para las Juventudes”, en éste el  comparte
-                        el proyecto y objetivos de este.<br/><br/>
+                        Para esta modalidad es importante resaltar que el alumno deberá entregar los mismos formatos del servicio social regular pero adaptado a la modalidad de juventudes .Los formatos deberán ser impresos en hoja membretada y estar firmados y sellados . 
+                        <br/><br/>
+                        Para el registro deberá enviar correo electrónico a serviciosocial@utel.edu.mx o llenar el formulario (SERSO) con los siguientes datos:
+                        <br/>
+                        Nombre completo y matrícula<br/>
+                        Modalidad de servicio social
+                        <br/><br/>
+                        1. El alumno deberá llenar el formato para registrar el inicio del “Servicio Social para las Juventudes”, en éste compartirá el proyecto a desarrollar y los objetivos.<br/><br/>
 
-                        2. Una vez aceptado el proyecto se comparte la Solicitud Servicio
-                        Social para las Juventudes (Anexo 1) con la cual se le registra al
-                        programa.<br/><br/>
+                        2.  El alumno deberá compartir  los avances del proyecto hasta cumplir el objetivo.<br/><br/>
 
                         3. El  comienza con la entrega de los avances del proyecto de
                         manera mensual hasta cumplir el objetivo de este.<br/><br/>
 
-                        4. Una vez entregados los 3 avances el  envía la versión final
-                        del proyecto reportando los objetivos alcanzados con la elaboración
-                        de los materiales para poder entregar el Reporte Global de
-                        Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
+                        4. 4. Una vez entregados los 3 avances el  alumno deberá enviar  la versión final del proyecto reportando los objetivos alcanzados con la elaboración de los materiales ,para poder entregar el Reporte Global de Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
 
-                        5. Se emite la Carta de liberación del Servicio Social.
+                        5. Por último el alumno deberá adjuntar los formatos en SIU , para proceder con la validación y liberación del servicio social .
 
                       </p>
                     </div>
