--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -2961,7 +2961,7 @@
             <div id="panelsStayOpen-collapseprocesoProgratuto" class="accordion-collapse collapse"
               aria-labelledby="panelsStayOpen-headingproceso">
               <div class="accordion-body">
-                <div class="container rounded-3 my-3 py-3 bg-white">
+                <div class="container rounded-3 my-3 py-3 bg-white"  style="text-align: justify;">
                   <h1 class="text-center">Proceso Servicio Social Programa de Tutorías</h1>
 
                   <div class="row">
