--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -528,16 +528,16 @@
                       <!---El salvador--->
                       <div class="accordion-item">
                         <!--Botón-->
-                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosDominicana">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentossalvador">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseDocumentosDominicana" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseDocumentosDominicana">
+                            data-bs-target="#panelsStayOpen-collapseDocumentossalvador" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentossalvador">
                             Documentos El salvador
                           </button>
                         </h2>
                         <!--Contenido-->
-                        <div id="panelsStayOpen-collapseDocumentosDominicana" class="accordion-collapse collapse"
-                          aria-labelledby="panelsStayOpen-headingDocumentosDominicana">
+                        <div id="panelsStayOpen-collapseDocumentossalvador" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentossalvador">
                           <div class="accordion-body">
                             <h2 class="text-center">Republica El salvador</h2>
                             <div class="row">
@@ -596,16 +596,16 @@
                       <!---España--->
                       <div class="accordion-item">
                         <!--Botón-->
-                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosEcuador">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosEspaña">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseDocumentosEcuador" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseDocumentosEcuador">
+                            data-bs-target="#panelsStayOpen-collapseDocumentosEspaña" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentosEspaña">
                             Documentos España
                           </button>
                         </h2>
                         <!--Contenido-->
-                        <div id="panelsStayOpen-collapseDocumentosEcuador" class="accordion-collapse collapse"
-                          aria-labelledby="panelsStayOpen-headingDocumentosEcuador">
+                        <div id="panelsStayOpen-collapseDocumentosEspaña" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentosEspaña">
                           <div class="accordion-body">
                             <h2 class="text-center">Documentos España</h2>
                             <div class="row">
@@ -663,16 +663,16 @@
                       <!---Guatemala--->
                       <div class="accordion-item">
                         <!--Botón-->
-                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosBolivia">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentoGuatemala">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseDocumentosBolivia" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseDocumentosBolivia">
+                            data-bs-target="#panelsStayOpen-collapseDocumentosGuatemala" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentosGuatemala">
                             Documentos Guatemala
                           </button>
                         </h2>
                         <!--Contenido-->
-                        <div id="panelsStayOpen-collapseDocumentosBolivia" class="accordion-collapse collapse"
-                          aria-labelledby="panelsStayOpen-headingDocumentosBolivia">
+                        <div id="panelsStayOpen-collapseDocumentosGuatemala" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentosGuatemala">
                           <div class="accordion-body">
                             <h2 class="text-center">Documentos Guatemala</h2>
                             <div class="row">
@@ -731,16 +731,16 @@
                       <!---Paraguay--->
                       <div class="accordion-item">
                         <!--Botón-->
-                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosArgentina">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosParaguay">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseDocumentosArgentina" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseDocumentosArgentina">
+                            data-bs-target="#panelsStayOpen-collapseDocumentosParaguay" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentosParaguay">
                             Documentos Paraguay
                           </button>
                         </h2>
                         <!--Contenido-->
-                        <div id="panelsStayOpen-collapseDocumentosArgentina" class="accordion-collapse collapse"
-                          aria-labelledby="panelsStayOpen-headingDocumentosArgentina">
+                        <div id="panelsStayOpen-collapseDocumentosParaguay" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentosParaguay">
                           <div class="accordion-body">
                             <h2 class="text-center">Documentos Paraguay</h2>
                             <div class="row">
@@ -937,16 +937,16 @@
                       <!---USA--->
                       <div class="accordion-item">
                         <!--Botón-->
-                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosArgentina">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosUSA">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseDocumentosArgentina" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseDocumentosArgentina">
+                            data-bs-target="#panelsStayOpen-collapseDocumentosUSA" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentosUSA">
                             Documentos USA
                           </button>
                         </h2>
                         <!--Contenido-->
-                        <div id="panelsStayOpen-collapseDocumentosArgentina" class="accordion-collapse collapse"
-                          aria-labelledby="panelsStayOpen-headingDocumentosArgentina">
+                        <div id="panelsStayOpen-collapseDocumentosUSA" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentosUSA">
                           <div class="accordion-body">
                             <h2 class="text-center">Documentos USA</h2>
                             <div class="row">
