--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -167,7 +167,7 @@
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
 
-                  Documento que hace constar que has concluido el 100% de tus créditos del programa cursado, 
+                  Documento que hace constar que hse han concluido el 100% de los créditos del programa cursado, 
                   no contiene foto. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -184,7 +184,7 @@
                   <h5 class="card-title">Constancia de estudios</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
+                  Documento que hace constar el estatus de los estudios  estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
                   en tu SIU es la misma que se plasmará en el documento solicitado. Revisa que esté correcta ya que no habrá cambios. Hay que tomar en cuenta que calificaciones se actualizan 
                   luego de una semana de cerrado el curso.
@@ -204,7 +204,7 @@
                   <h5 class="card-title">Carta pasante</h5>
                   <p class="card-text"><small class="text-muted">Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que acredita el término de la Licenciatura y que te permite desempeñarte en el 
+                  Documento que acredita el término de la Licenciatura y que permite desempeñar en el 
                   ámbito laboral de la profesión mientras el alumno se encuentra en el proceso de titulación. 
                   Para obtenerla debes tener tu expediente digital completo y fotografías tamaño óvalo-credencial. <br/><br/>
                   
