--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -32,7 +32,7 @@
             <a>
               Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese
               momento se registran las calificaciones del alumno periodo a periodo.
-              De tal manera que al aprobar las materias y servicio social EL alumno tiene derecho a Título y
+              De tal manera que al aprobar las materias y servicio social el alumno tiene derecho a Título y
               Cédula.</br></br>
 
               Los documentos físicos originales deben estar en perfectas condiciones:</br></br>
@@ -1541,6 +1541,7 @@
                 </div>
               </div>
             </div>
+ 
           </div>
           
         </div>
