--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -167,7 +167,7 @@
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
                   <p class="card-text" style="text-align: justify;">
 
-                  Documento que hace constar que hse han concluido el 100% de los créditos del programa cursado, 
+                  Documento que hace constar que han concluido el 100% de los créditos del programa cursado, 
                   no contiene foto. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -243,7 +243,7 @@
                   <h5 class="card-title">Credencial</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que identificar al alumno como orgulloso alumno de la institución.
+                  Documento que identificar al alumno como parte de la institución.
                   Para obtenerla debes tener tu expediente digital completo.
                   <br/><br/>
                   
