--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -49,7 +49,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Éxito estudiantil</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Hilda Sara Mely Jardón Olguín</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Teléfono: 5589770707</br>
                       Whatsapp: 5589770707</br>
@@ -83,7 +83,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Aclaración de cargos</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Sergio Efraín Vega Sali</h6>
                     <p class="card-text">
                       Teléfono: </br> 5513289022</br>
                       Whatsapp: </br> 5514559559</br>
@@ -95,7 +95,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Cobranza Utel</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Diana Alejandra Manjarrez López</h6>
                     <p class="card-text">
                       Teléfono: </br> 5592522985</br>
                       Whatsapp: </br> 5592522985</br>
