--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -45,9 +45,6 @@
                             Una equivalencia es el documento a través del cual la autoridad educativa declara equiparables 
                             entre sí estudios realizados dentro del Sistema Educativo Nacional. <br/>
 
-                            Una revalidación es el documento a través del cual la autoridad educativa otorga validez 
-                            oficial a estudios realizados fuera del Sistema Educativo Nacional (en el extranjero), 
-                            siempre y cuando sean equiparables con estudios realizados dentro de dicho sistema.
 
                           </p>
 
@@ -81,14 +78,16 @@
                           <h5 class="card-title text-center">Revalidación</h5>
                           <p class="card-text" style="text-align: justify;">      
                             
-                            Trámite ante SEP para equiparar estudios realizados fuera del sistema educativo nacional (en  el extranjero)</br></br>
-
-                            Esta forma aplica para alumnos con estudios en el extranjero que desean ejercer profesionalmente en México.</br></br>
                             
+                            Una revalidación es el documento a través del cual la autoridad educativa otorga validez 
+                            oficial a estudios realizados fuera del Sistema Educativo Nacional (en el extranjero), 
+                            siempre y cuando sean equiparables con estudios realizados dentro de dicho sistema.      
+                            <br/><br/>
                             En este tramite el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
                             normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un alumno regular, 
                             cumpliendo con su servicio social para poder realizar su registro para emisión de cédula profesional, 
-                            de igual forma es necesario realizar el tramite de obtención de CURP)                                 
+                            de igual forma es necesario realizar el tramite de obtención de CURP).
+                                                      
 
                           </p>
 
@@ -184,9 +183,9 @@
                   <h5 class="card-title">Constancia de estudios</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que hace constar el estatus de los estudios  estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
+                  Documento que hace constar el estatus de los estudios al momento de su expedición. Para obtenerla el alumno debe tener tu expediente digital completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
-                  en tu SIU es la misma que se plasmará en el documento solicitado. Revisa que esté correcta ya que no habrá cambios. Hay que tomar en cuenta que calificaciones se actualizan 
+                  en SIU es la misma que se plasmará en el documento solicitado. Es importante que el alumno revise que esté correcta ya que no habrá cambios. Hay que tomar en cuenta que calificaciones se actualizan 
                   luego de una semana de cerrado el curso.
                   <br/><br/>
                   
@@ -206,7 +205,7 @@
                   <p class="card-text" style="text-align: justify;">
                   Documento que acredita el término de la Licenciatura y que permite desempeñar en el 
                   ámbito laboral de la profesión mientras el alumno se encuentra en el proceso de titulación. 
-                  Para obtenerla debes tener tu expediente digital completo y fotografías tamaño óvalo-credencial. <br/><br/>
+                  Para obtenerla se debe tener el expediente digital completo y fotografías tamaño óvalo-credencial en digital. <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
                   Tiempo estimado de espera: 5 a 10 días hábiles.<br/>
@@ -225,7 +224,7 @@
                   <p class="card-text" style="text-align: justify;">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo el alumno debe tener cursado mínimo un cuatrimestre del programa inscrito 
                   y el expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
-                  actualmente en SIU es la misma que se plasmará en el documento solicitado. Revisa que esté correcta ya que no habrá cambios.
+                  actualmente en SIU es la misma que se plasmará en el documento solicitado. Es importante que el alumno revise que la información es correcta ya que no habrá cambios.
                   <br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -243,8 +242,8 @@
                   <h5 class="card-title">Credencial</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento que identificar al alumno como parte de la institución.
-                  Para obtenerla debes tener tu expediente digital completo.
+                  Documento que identifica al alumno como parte de la institución.
+                  Para obtenerse se debe tener el expediente digital completo.
                   <br/><br/>
                   
                   Costo: 200.00 MXN<br/><br/>
@@ -258,13 +257,13 @@
               <!--Constancia inscripcion-->
               <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="tituloint">
                 <div class="card-body">
-                  <h5 class="card-title">CONSTANCIA DE INSCRIPCIÓN</h5>
+                  <h5 class="card-title">Constancia de inscripción</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text" style="text-align: justify;">
-                  Documento para alumnos de futuros y de nuevo ingreso, que avala su inscripción en un programa Utel.<br/><br/>
+                  Documento para alumnos futuros y de nuevo ingreso, que avala su inscripción en un programa Utel.<br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: <br/>
+                  Tiempo estimado de espera: 5 a 8 días hábiles<br/>
                   
                   </p>
                 </div>
@@ -281,7 +280,7 @@
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida<br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
-                  Tiempo estimado de espera: <br/>
+                  <!--Diploma MasterTiempo estimado de espera: <br/>-->
                   
                   </p>
                 </div>
