--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -1389,9 +1389,10 @@
                         2.  El alumno deberá compartir  los avances del proyecto hasta cumplir el objetivo.<br/><br/>
 
                         3. El  comienza con la entrega de los avances del proyecto de
-                        manera mensual hasta cumplir el objetivo de este.<br/><br/>
+                        manera mensual hasta cumplir el objetivo de este.
+                        <br/><br/>
 
-                        4. 4. Una vez entregados los 3 avances el  alumno deberá enviar  la versión final del proyecto reportando los objetivos alcanzados con la elaboración de los materiales ,para poder entregar el Reporte Global de Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
+                        4. Una vez entregados los 3 avances el  alumno deberá enviar  la versión final del proyecto reportando los objetivos alcanzados con la elaboración de los materiales ,para poder entregar el Reporte Global de Actividades (Anexo 2) y Constancia de Término (Anexo 3).<br/><br/>
 
                         5. Por último el alumno deberá adjuntar los formatos en SIU , para proceder con la validación y liberación del servicio social .
 
@@ -2027,7 +2028,7 @@
                         <br/><br/>
                         3. El alumno deberá llevar a cabo las actividades propuestas por la institución, las características y finalización del programa depende de la ONG o Asociación Civil. Una vez finalizado el programa , la institución emite el reporte global de actividades (Anexo 2) y la Constancia de término (Anexo 3).
                         <br/><br/>
-                        4. Al finalizar el alumno deberá compartir los formatos de término para revisión y posterior tendrá que adjuntarlos en el porta SIu para la validación y liberación
+                        4. Al finalizar el alumno deberá compartir los formatos de término para revisión y posterior tendrá que adjuntarlos en el portal SIU para la validación y liberación
                       </p>
                     </div>
 
