--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -493,16 +493,15 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Diploma intermedio auxiliar</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint"></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
+                    <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint">Diploma intermedio auxiliar</h5>
   
                   <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
 
                     <div class="col">
-  
-  
                       <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
@@ -561,7 +560,7 @@
 
                 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Diploma intermedio analista</h5>
+                  <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint" ></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -569,6 +568,7 @@
                   <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
 
                     <div class="col">
+                      <h5 class="offcanvas-title text-center" id="offcanvasBottomLabeltitint" >Diploma intermedio analista</h5>
   
   
                       <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
